<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/activity_login_image"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:src="@mipmap/ic_launcher" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/activity_login_first"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:gravity="center"
                android:text="@string/telephone"
                android:textSize="16sp" />

            <EditText
                android:layout_width="180dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:hint="@string/write_telephone_number" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/grey"
                android:gravity="center"
                android:text="@string/get_telephone_captcha" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_below="@id/activity_login_first"
            android:background="@color/black_66" />

        <LinearLayout
            android:id="@+id/activity_login_second"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@id/activity_login_first"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:gravity="center"
                android:text="@string/captcha"
                android:textSize="16sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:hint="@string/write_captcha" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_below="@id/activity_login_second"
            android:background="@color/black_66" />

        <TextView
            android:layout_marginEnd="40dp"
            android:layout_marginStart="40dp"
            android:textColor="@color/white_100"
            android:background="@drawable/login_button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/activity_login_second"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/login"
            android:textSize="18sp" />
    </RelativeLayout>

</LinearLayout>